--- a/index.html
+++ b/index.html
@@ -1230,22 +1230,22 @@
                                         </div>
                                     </div>
                                     <div class="wrapMovie">
-                                            <div class="movieInfo">
-                                                <img src="https://s3img.vcdn.vn/mobile/123phim/2019/05/cau-chuyen-do-choi-4-toy-story-4-15591052666530_60x60.jpg"
-                                                    alt="">
-                                                <div class="wrapInfo">
-                                                    <span class="nameMovie">Câu Chuyện Đồ Chơi 4 - Toy Story 4</span>
-                                                    <span class="timeMovie">100 phút - 123Phim 9.3 - IMDb 8.3</span>
-                                                </div>
-                                            </div>
-                                            <div class="listTime">
-                                                <img src="./img/icon/type/2_0.png" alt="">
-                                                <div class="sessons">
-                                                    <a href="" class="time">10:50</a>
-                                                    <a href="" class="time">11:50</a>
-                                                </div>
+                                        <div class="movieInfo">
+                                            <img src="https://s3img.vcdn.vn/mobile/123phim/2019/05/cau-chuyen-do-choi-4-toy-story-4-15591052666530_60x60.jpg"
+                                                alt="">
+                                            <div class="wrapInfo">
+                                                <span class="nameMovie">Câu Chuyện Đồ Chơi 4 - Toy Story 4</span>
+                                                <span class="timeMovie">100 phút - 123Phim 9.3 - IMDb 8.3</span>
                                             </div>
                                         </div>
+                                        <div class="listTime">
+                                            <img src="./img/icon/type/2_0.png" alt="">
+                                            <div class="sessons">
+                                                <a href="" class="time">10:50</a>
+                                                <a href="" class="time">11:50</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="tab-pane" id="profile" role="tabpanel">Profile
                                 </div>
@@ -1266,10 +1266,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </section>
 
     <!-- News -->
@@ -1802,38 +1798,64 @@
                 if ($(this).is(".slick-film")) {
                     $(this).slick({
                         prevArrow: '<img class="left-arrow" src="./img/icon/back-session.png">',
-                        nextArrow: '<img class="right-arrow" src="./img/icon/next-session.png">',
-                        slidesPerRow: 4,
-                        rows: 2,
+                        nextArrow: '<img class="right-arrow" src="./img/icon/next-session.png">',                        
+                        infinite: true,
+                        speed: 300,
+                        slidesPerRow: 4,                   
+                        rows:2,
                         responsive: [
                             {
                                 breakpoint: 1024,
-                                settings: "unslick"
+                                settings: {
+                                    slidesPerRow: 3,                   
+                                    rows:2,
+                                    infinite: true,                                   
+                                }
                             },
                             {
                                 breakpoint: 600,
                                 settings: {
-                                    slidesToShow: 2,
-                                    slidesToScroll: 2
+                                    slidesPerRow: 2,                   
+                                    rows:2,
+                                    infinite: true,
+                                    arrows:false,
+                                    dot:false,   
                                 }
                             },
-                            {
-                                breakpoint: 480,
-                                settings: {
-                                    slidesToShow: 1,
-                                    slidesToScroll: 1
-                                }
-                            }
+                           
                         ]
                     });
                 }
                 else if ($(this).is(".slick-soon")) {
                     $(this).slick({
                         prevArrow: '<img class="left-arrow" src="./img/icon/back-session.png">',
-                        nextArrow: '<img class="right-arrow" src="./img/icon/next-session.png">',
-                        slidesPerRow: 4,
-                        rows: 2,
-                    });
+                        nextArrow: '<img class="right-arrow" src="./img/icon/next-session.png">',                        
+                        infinite: true,
+                        speed: 300,
+                        slidesPerRow: 4,                   
+                        rows:2,
+                        responsive: [
+                            {
+                                breakpoint: 1024,
+                                settings: {
+                                    slidesPerRow: 3,                   
+                                    rows:2,
+                                    infinite: true,                                   
+                                }
+                            },
+                            {
+                                breakpoint: 600,
+                                settings: {
+                                    slidesPerRow: 2,                   
+                                    rows:2,
+                                    infinite: true,
+                                    arrows:false,
+                                    dot:false,   
+                                }
+                            },
+                           
+                        ]
+                    });                   
                 }
                 else if ($(this).is(".slick-news")) {
                     $(this).slick({
@@ -1855,8 +1877,10 @@
                     $(this).slick();
                 }
             })
-        }); // end of os-carousel.js
-
+        }); 
+        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+        $('.slick-soon').slick('setPosition');
+});
 
     </script>
     <script src="./js/main.js"></script>
